# my-blog-practice

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
assets/styles/: main.css
content/: day1.md
workflows/: ci.yml
